styling for avoiding task modals covering top bar

--- a/mxcube3/ui/components/MXNavbar/MXNavbar.css
+++ b/mxcube3/ui/components/MXNavbar/MXNavbar.css
@@ -1,6 +1,7 @@
 .navbar-fixed-top {
   position:sticky !important;
   top:0 !important;
+  z-index: 10000;
 }
 
 .navbar li {
